--- a/index.html
+++ b/index.html
@@ -124,25 +124,25 @@
                 <img id="svg" src="/images/logo.svg" alt="">
             </div>
             <div class="icon">
-                <p> FAQs</p>
-                <p> Contact Us</p>
+                <p> <a href="">FAQs</a></p>
+                <p> <a href="">Contact Us</a></p>
             </div>
             <div class="icon">
-                <p>Privacy Policy</p>
-                <p>Press Kit</p>
+                <p><a href="">Privacy Policy</a></p>
+                <p><a href="">Press Kit</a></p>
             </div>
             <div class="icon">
-                <p> Install Guide</p>
+                <p> <a href="">Install Guide</a></p>
             </div>
             <div class="face">
                 <div class="icon">
-                    <img src="/images/icon-facebook.svg" alt="facebook">
+                   <a href=""><img src="/images/icon-facebook.svg" alt="facebook"></a> 
                 </div>
                 <div  class="icon">
-                    <img src="/images/icon-twitter.svg" alt="twit">
+                    <a href=""><img src="/images/icon-twitter.svg" alt="twit"></a>
                 </div>
                 <div class="icon">
-                   <img src="/images/icon-instagram.svg" alt="instagram"> 
+                  <a href=""><img src="/images/icon-instagram.svg" alt="instagram"></a>  
                 </div>
             </div>
         </div>
